--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
 	"files.associations": {
 		"mlx.h": "c",
-		"math.h": "c"
+		"math.h": "c",
+		"fdf.h": "c",
+		"ft_printf.h": "c",
+		"libft.h": "c",
+		"unistd.h": "c"
 	}
 }
